# runit-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  makefile
cli/: Cargo.toml  README.md
cli/src/: main.rs
gui/: Cargo.toml
gui/assets/styling/: main.css  table.css
gui/src/: main.rs
gui/src/components/: lateral.rs  mod.rs  table.rs
libunits-converter/: Cargo.toml
libunits-converter/src/: error.rs  factory.rs  init_db.rs  lib.rs  parser.rs
libunits-converter/src/datatypes/: mod.rs
libunits-converter/src/unitquery/: mod.rs  sql.rs
migrations/: 001_units.sql  002_dimensions.sql  003_conversion.sql
src/: error.rs  init_db.rs  lib.rs  main.rs  parser.rs
src/datatypes/: mod.rs
src/unitquery/: mod.rs  sql.rs
