[package]
name = "runits-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
turso = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
thiserror = "2.0.15"
[lib]
name = "runits_converter"
path = "src/lib.rs"

[[bin]]
name = "init_db"
path = "src/init_db.rs"

[dev-dependencies]
proptest = "1.7.0"
