[workspace]
members = ["cli", "libunits-converter"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Casale"]
description = "Unit convert and Dimensional analysis"
documentation = ""
license = "GPL-3.0-or-later"

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }
turso = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
thiserror = "2.0.15"
libunits_converter = { path = "./libunits-converter" }
