[workspace]
members = ["cli", "libunits-converter", "gui"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"

authors = ["bcasale <benjamin.casale@proton.me>"]
description = "Unit convert and Dimensional analysis"
documentation = ""
license = "GPL-3.0-or-later"

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }
turso = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
thiserror = "2.0.15"
libunits_converter = { path = "./libunits-converter" }

[profile.release-performance]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "none"
panic = "unwind"
incremental = false
opt-level = 3
debug = 0
overflow-checks = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
